--- a/Project/Report/Final Report/slide/Slide.tex
+++ b/Project/Report/Final Report/slide/Slide.tex
@@ -136,7 +136,7 @@
     \begin{itemize}
       \item \textbf{Nim} with multiple pile configurations
       \item \textbf{Kayles} (bowling pins game)
-      \item Two additional ICG variants
+      \item \textbf{Take coins, Split cards and subtract factors}\\our original creations
       \item All with complete rule validation
     \end{itemize}
   \end{block}
@@ -144,11 +144,70 @@
   \begin{block}{System Features}
     \begin{itemize}
       \item Fully functional graphical UI using Pygame
-      \item Three gameplay modes: PvP, PvC, Analysis
+      \item Three gameplay modes: PvP, PvC
       \item Real-time strategy analysis display
-      \item Move history and undo functionality
     \end{itemize}
   \end{block}
+\end{frame}
+
+\begin{frame}{Platform Screenshots I}
+  \begin{columns}[T]
+    \begin{column}{0.48\textwidth}
+      \begin{block}{Main Menu Interface}
+        \centering
+        \includegraphics[width=0.95\linewidth, height=5.5cm, keepaspectratio]{figures/main_menu.png}
+        \small{Main menu with game selection and options}
+      \end{block}
+    \end{column}
+    
+    \begin{column}{0.48\textwidth}
+      \begin{block}{Help Guide}
+        \centering
+        \includegraphics[width=0.95\linewidth, height=5.5cm, keepaspectratio]{figures/help_guide.png}
+        \small{Interactive help guide and rule explanation}
+      \end{block}
+    \end{column}
+  \end{columns}
+\end{frame}
+
+\begin{frame}{Platform Screenshots II}
+  \begin{columns}[T]
+    \begin{column}{0.48\textwidth}
+      \begin{block}{Game Example 1}
+        \centering
+        \includegraphics[width=0.95\linewidth, height=5.5cm, keepaspectratio]{figures/game_example_1.png}
+        \small{Take coins game interface with move visualization}
+      \end{block}
+    \end{column}
+    
+    \begin{column}{0.48\textwidth}
+      \begin{block}{Game Example 2}
+        \centering
+        \includegraphics[width=0.95\linewidth, height=5.5cm, keepaspectratio]{figures/game_example_2.png}
+        \small{Split cards game interface showing strategy analysis}
+      \end{block}
+    \end{column}
+  \end{columns}
+\end{frame}
+
+\begin{frame}{Platform Screenshots III}
+  \begin{columns}[T]
+    \begin{column}{0.48\textwidth}
+      \begin{block}{Sidebar Functionality}
+        \centering
+        \includegraphics[width=0.95\linewidth, height=5.5cm, keepaspectratio]{figures/sidebar.png}
+        \small{Sidebar with control options}
+      \end{block}
+    \end{column}
+    
+    \begin{column}{0.48\textwidth}
+      \begin{block}{Settings Interface}
+        \centering
+        \includegraphics[width=0.95\linewidth, height=5.5cm, keepaspectratio]{figures/settings.png}
+        \small{Settings panel for game customization and preferences}
+      \end{block}
+    \end{column}
+  \end{columns}
 \end{frame}
 
 \begin{frame}{Team Contributions}
@@ -211,7 +270,6 @@
     \item \textbf{Game Expansion}: Support for more complex ICG variants
     \item \textbf{AI Integration}: Machine learning for strategy prediction
     \item \textbf{Cloud Deployment}: Web-based platform for broader accessibility
-    \item \textbf{Quantum Computing}: Exploration of quantum algorithms for game solving
   \end{itemize}
 \end{frame}
 
