--- a/Project/Report/Final Report/slide/Slide.tex
+++ b/Project/Report/Final Report/slide/Slide.tex
@@ -78,11 +78,11 @@
 \section{Our Solutions}
 \begin{frame}{System Architecture}
   \begin{block}{Three-Tier Architecture}
-    \begin{description}
-      \item[Game Logic Layer] Implements rules and state transitions for each game
-      \item[AI Engine Layer] Optimized recursion with memoization for strategy analysis
-      \item[User Interface Layer] Pygame-based interactive graphical interface
-    \end{description}
+    \begin{itemize}
+      \item \textbf{Game Logic Layer} \\Implements rules and state transitions for each game
+      \item \textbf{AI Engine Layer} \\Optimized recursion with memoization for strategy analysis
+      \item \textbf{User Interface Layer} \\Pygame-based interactive graphical interface
+    \end{itemize}
   \end{block}
   
   \begin{block}{Modular Design}
