--- a/Project/Report/Final Report/slide/Slide.tex
+++ b/Project/Report/Final Report/slide/Slide.tex
@@ -146,6 +146,7 @@
       \item Fully functional graphical UI using Pygame
       \item Three gameplay modes: PvP, PvC
       \item Real-time strategy analysis display
+      \item Convenient keyboard control
     \end{itemize}
   \end{block}
 \end{frame}
